files/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  ports:
  - name: nginx-svc
    protocol: TCP
    port: 80
  selector:
    app: nginx-mult
