files/nginxpage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxpage-svc
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
