files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-ubunta.ru
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nginxpage-svc
                port:
                  number: 80
            path: /
  tls:
  - hosts:
    - nginx-ubunta.ru
    secretName: nginx-tls
